--- a/index.html
+++ b/index.html
@@ -7,20 +7,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@400;500;600;700&family=Poppins:wght@500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>Hello World</h1>
-      <h2>Hello World</h2>
-      <h3>Hello World</h3>
-      <h4>Hello World</h4>
-      <h5>Hello World</h5>
-      <h6>Hello World</h6>
-    </div>
+    <header>
+      <div class="container">
+        <a href="#">
+          <img src="img/logo.svg" alt="Logo Bankboost" />
+        </a>
+        <div class="right">
+          <nav>
+            <a href="#">Produtos Boost</a>
+            <a href="#">Conta digital PJ</a>
+            <a href="#">Quem somos</a>
+            <a href="#">Blog</a>
+            <a href="#">Ajuda</a>
+          </nav>
+          <a href="#" class="btn">Abra sua conta digital</a>
+        </div>
+      </div>
+    </header>
     <script src="js/main.js"></script>
   </body>
 </html>
