--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@400;500;600;700&family=Poppins:wght@500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/main.css" />
@@ -30,6 +30,36 @@
         </div>
       </div>
     </header>
+    <section class="s-hero">
+      <div class="container">
+        <div class="left">
+          <h3>Abra sua conta, é só baixar o app!</h3>
+          <h1>Desperte seu potencial financeiro com o Bankboost!</h1>
+          <a href="#" class="btn">Abra sua conta digital</a>
+          <ul>
+            <li>
+              <img src="img/icon-1.svg" alt="icon" />
+              <span>Cartão sem <br />anuidade</span>
+            </li>
+            <li>
+              <img src="img/icon-2.svg" alt="icon" />
+              <span>Conta digital<br />100% grátis</span>
+            </li>
+            <li>
+              <img src="img/icon-3.svg" alt="icon" />
+              <span>Seu dinheiro <br />rendendo mais</span>
+            </li>
+          </ul>
+        </div>
+        <div class="right">
+          <h2>Banco 100% digital</h2>
+          <div class="cards">
+            <img class="item card-one" src="img/card-1.png" alt="card 01" />
+            <img class="item card-two" src="img/card-2.png" alt="card 02" />
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
