--- a/index.html
+++ b/index.html
@@ -60,6 +60,36 @@
         </div>
       </div>
     </section>
+    <div class="s-boost">
+      <div class="container">
+        <div class="left">
+          <div class="mockup">
+            <img src="img/app.svg" alt="Mockup" />
+          </div>
+          <div class="description">
+            <img src="img/icon-7.svg" alt="boost" />
+            <h3>Baixe nosso app</h3>
+            <p>
+              Que tal abrir uma conta digital para ver como a gente faz a sua
+              vida muito mais simples?
+            </p>
+            <ul>
+              <li>
+                <a href="#" target="_blank">
+                  <img src="img/button-ios.svg" alt="button apple" />
+                </a>
+              </li>
+              <li>
+                <a href="#" target="_blank">
+                  <img src="img/button-android.svg" alt="button google" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="right"></div>
+      </div>
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
