--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <img src="img/app.svg" alt="Mockup" />
           </div>
           <div class="description">
-            <img src="img/icon-7.svg" alt="boost" />
+            <img class="icon" src="img/icon-7.svg" alt="boost" />
             <h3>Baixe nosso app</h3>
             <p>
               Que tal abrir uma conta digital para ver como a gente faz a sua
