--- a/index.html
+++ b/index.html
@@ -87,7 +87,64 @@
             </ul>
           </div>
         </div>
-        <div class="right"></div>
+        <div class="right">
+          <h2>Resolva sua vida direto pelo app boost!</h2>
+          <ul class="list">
+            <li>
+              <div class="icon">
+                <img src="img/icon-credit-card.svg" alt="icon card" />
+              </div>
+              <div class="text">
+                <h4>Cartão de crédito sem anuidade</h4>
+                <p>
+                  Conta digital com cartão de crédito sem anuidade e sem
+                  complicação
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <img src="img/icon-porcent.svg" alt="icon card" />
+              </div>
+              <div class="text">
+                <h4>Sem taxas</h4>
+                <p>
+                  Transferências, boletos de depósito e outros serviços
+                  gratuitos
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <img src="img/icon-cifrao.svg" alt="icon card" />
+              </div>
+              <div class="text">
+                <h4>Mais investimentos</h4>
+                <p>Rendem mais que a poupança e você resgata quando quiser</p>
+              </div>
+            </li>
+          </ul>
+          <a href="#" class="btn">Conheça outros produtos</a>
+          <div class="box">
+            <div class="text">
+              <h3>Boost Pejota</h3>
+              <h5>Contas digitais PJ gratuitas para decolar seu negócio!</h5>
+              <p>
+                As melhores contas para fazer pagamentos, compras e receber dos
+                seus clientes.
+              </p>
+              <ul>
+                <li>
+                  <button>Sou MEI</button>
+                </li>
+                <li>
+                  <button>Sou ME</button>
+                </li>
+              </ul>
+            </div>
+            <img class="card" src="img/card.svg" alt="card" />
+          </div>
+        </div>
       </div>
     </div>
     <script src="js/main.js"></script>
