--- a/index.html
+++ b/index.html
@@ -147,6 +147,22 @@
         </div>
       </div>
     </div>
+    <div class="s-depositions">
+      <div class="container">
+        <div class="title">
+          <h2>
+            Prático, fácil, moderno
+            <strong>Você resolve tudo sem estresse</strong> 😊
+          </h2>
+        </div>
+        <div class="card-deposition">
+          <div class="user">
+            <span>@marciogurka</span>
+            <img src="img/twitter-icon.svg" alt="twitter icon" />
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
