--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
       </div>
     </div>
-    <div class="s-depositions">
+    <section class="s-depositions">
       <div class="container">
         <div class="title">
           <h2>
@@ -162,7 +162,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
