--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
@@ -152,17 +156,91 @@
         <div class="title">
           <h2>
             Prático, fácil, moderno
-            <strong>Você resolve tudo sem estresse</strong> 😊
+            <strong>Você resolve tudo sem estresse 😊</strong>
           </h2>
+          <div class="swiper-pagination"></div>
         </div>
-        <div class="card-deposition">
-          <div class="user">
-            <span>@marciogurka</span>
-            <img src="img/twitter-icon.svg" alt="twitter icon" />
+
+        <div class="slide-depositions">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="card-deposition">
+                <div class="user">
+                  <span>@marciogurka</span>
+                  <img src="img/twitter-icon.svg" alt="twitter icon" />
+                </div>
+                <p>
+                  Valeu @banconenon! Linda embalagem e o cartão tbm é lindo!
+                  Muito amor por esse banco #bancoNeon
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card-deposition">
+                <div class="user">
+                  <span>@marciogurka</span>
+                  <img src="img/twitter-icon.svg" alt="twitter icon" />
+                </div>
+                <p>
+                  Valeu @banconenon! Linda embalagem e o cartão tbm é lindo!
+                  Muito amor por esse banco #bancoNeon
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card-deposition">
+                <div class="user">
+                  <span>@marciogurka</span>
+                  <img src="img/twitter-icon.svg" alt="twitter icon" />
+                </div>
+                <p>
+                  Valeu @banconenon! Linda embalagem e o cartão tbm é lindo!
+                  Muito amor por esse banco #bancoNeon
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card-deposition">
+                <div class="user">
+                  <span>@marciogurka</span>
+                  <img src="img/twitter-icon.svg" alt="twitter icon" />
+                </div>
+                <p>
+                  Valeu @banconenon! Linda embalagem e o cartão tbm é lindo!
+                  Muito amor por esse banco #bancoNeon
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card-deposition">
+                <div class="user">
+                  <span>@marciogurka</span>
+                  <img src="img/twitter-icon.svg" alt="twitter icon" />
+                </div>
+                <p>
+                  Valeu @banconenon! Linda embalagem e o cartão tbm é lindo!
+                  Muito amor por esse banco #bancoNeon
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card-deposition">
+                <div class="user">
+                  <span>@marciogurka</span>
+                  <img src="img/twitter-icon.svg" alt="twitter icon" />
+                </div>
+                <p>
+                  Valeu @banconenon! Linda embalagem e o cartão tbm é lindo!
+                  Muito amor por esse banco #bancoNeon
+                </p>
+              </div>
+            </div>
           </div>
+          <div class="swiper-pagination"></div>
         </div>
       </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
