--- a/index.html
+++ b/index.html
@@ -240,7 +240,44 @@
         </div>
       </div>
     </section>
-
+    <section class="s-account">
+      <div class="container">
+        <div class="left">
+          <h2>
+            Aproveite
+            <strong>Domine o seu dinheiro com uma conta 100% digital</strong>
+          </h2>
+          <ul>
+            <li>
+              <img src="img/icon-square-1.svg" alt="Icon card" />
+              <div class="text">
+                <h4>Cartão visa internacional</h4>
+                <p>Tenha facilidades e benefícios para o seu dia a dia.</p>
+              </div>
+            </li>
+            <li>
+              <img src="img/icon-square-2.svg" alt="Icon card" />
+              <div class="text">
+                <h4>Zero mensalidade e anuidade</h4>
+                <p>Não gaste grana pagando taxas desnecessárias.</p>
+              </div>
+            </li>
+            <li>
+              <img src="img/icon-square-3.svg" alt="Icon card" />
+              <div class="text">
+                <h4>Investimento que rende mais que a poupança</h4>
+                <p>Invista o seu dinheiro de maneira mais rentável.</p>
+              </div>
+            </li>
+          </ul>
+          <a href="#" class="btn">Abra sua conta digital</a>
+        </div>
+        <div class="right">
+          <img class="mockup one" src="img/mockup1.png" alt="mock 1" />
+          <img class="mockup two" src="img/mockup2.png" alt="mock 2" />
+        </div>
+      </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
