--- a/index.html
+++ b/index.html
@@ -278,6 +278,133 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="container">
+        <div class="area-social">
+          <img src="img/logo.svg" alt="logo" />
+          <div class="social-midia">
+            <span>Acompanhe nas redes</span>
+            <ul>
+              <li>
+                <a href="#">
+                  <img src="img/youtube-icon.svg" alt="youtube-icon" />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/linkedin-icon.svg" alt="linkedin-icon" />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/facebook-icon.svg" alt="facebook-icon" />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/insta-icon.svg" alt="insta-icon" />
+                </a>
+              </li>
+
+              <li>
+                <a href="#">
+                  <img src="img/twitter-icon-footer.svg" alt="twitter" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="main-area">
+          <div class="left">
+            <div class="item">
+              <h5>Produtos Boost</h5>
+              <ul>
+                <li>
+                  <a href="#"> Cartão de crédito </a>
+                </li>
+                <li>
+                  <a href="#"> Cartão pré-pago</a>
+                </li>
+                <li>
+                  <a href="#"> Boost Mais</a>
+                </li>
+                <li>
+                  <a href="#"> Investimentos</a>
+                </li>
+                <li>
+                  <a href="#"> Empréstimo</a>
+                </li>
+              </ul>
+            </div>
+            <div class="item">
+              <h5>Conta digital PJ</h5>
+              <ul>
+                <li>
+                  <a href="#"> Sou MEI </a>
+                </li>
+                <li>
+                  <a href="#"> Sou ME</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="item">
+              <h5>Blog</h5>
+              <ul>
+                <li>
+                  <a href="#"> #focanodinheiro</a>
+                </li>
+                <li>
+                  <a href="#"> O poder da comunidade</a>
+                </li>
+                <li>
+                  <a href="#"> Desafio das 52 semanas</a>
+                </li>
+                <li>
+                  <a href="#">Planilha de gastos</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="item">
+              <h5>Institucional</h5>
+              <ul>
+                <li>
+                  <a href="#"> Conheça a Bankboost</a>
+                </li>
+                <li>
+                  <a href="#"> Trabalhe conosco</a>
+                </li>
+                <li>
+                  <a href="#"> Termos de uso</a>
+                </li>
+                <li>
+                  <a href="#">Planilha de gastos</a>
+                </li>
+                <li>
+                  <a href="#">Políticas de privacidade</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="item">
+              <h5>Ajuda</h5>
+              <ul>
+                <li>
+                  <a href="#"> Ouvidoria</a>
+                </li>
+                <li>
+                  <a href="#"> Fale conosco</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="right"></div>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
