--- a/index.html
+++ b/index.html
@@ -400,7 +400,32 @@
               </ul>
             </div>
           </div>
-          <div class="right"></div>
+          <div class="right">
+            <a href="#">
+              <img src="img/email-ico.svg" alt="email icon" />
+              <div class="description">
+                <strong>Atendimento:</strong>
+                <p>oi@bankboost.com.br (24 horas)</p>
+              </div>
+            </a>
+            <a href="#">
+              <img src="img/icon-ballon.svg" alt="ballo icon" />
+              <div class="description">
+                <strong>Imprensa:</strong>
+                <p>imprensa@bankboost.com.br</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="copy">
+          <div class="text">
+            <img src="img/emoticon.png" alt="emoticon" />
+            <p>
+              Oi! Leu até aqui? Você se preocupa com os mínimos detalhes, mesmo.
+              A gente também. Por isso o time Bankboost está sempre trabalhando
+              para fazer a conta digital perfeita para você ; )
+            </p>
+          </div>
         </div>
       </div>
     </footer>
