--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           </nav>
           <a href="#" class="btn">Abra sua conta digital</a>
         </div>
+        <button class="btn-mobile">
+          <img src="img/hambuerger.svg" alt="icon" />
+        </button>
       </div>
     </header>
     <section class="s-hero">
@@ -158,7 +161,6 @@
             Prático, fácil, moderno
             <strong>Você resolve tudo sem estresse 😊</strong>
           </h2>
-          <div class="swiper-pagination"></div>
         </div>
 
         <div class="slide-depositions">
@@ -236,7 +238,6 @@
               </div>
             </div>
           </div>
-          <div class="swiper-pagination"></div>
         </div>
       </div>
     </section>
